fix: change spacing and to lower case on colors based on project review suggestions

--- a/styles.css
+++ b/styles.css
@@ -3,14 +3,16 @@ This stylesheet styles the animal-trading-card.
 This section styles the body and overall trading card
 **/
 body {
-	font-family:"OpenSans", sans-serif;
+	font-family: "OpenSans", sans-serif;
 	display: block;
 }
+
 .tradingcard {
-	border: solid #1A237E;
+	border: solid #1a237e;
 	box-shadow: 10px 5px 5px black;
 	width: 320px
 }
+
 /**
 this section styles the name at the top of the card
 */
@@ -18,36 +20,43 @@ this section styles the name at the top of the card
 	color: blue;
 	padding-left: 10px;
 }
+
 /**
 this section styles the image and the caption
 **/
 figure {
-	width:300px;
+	width: 300px;
 	margin: 10px;
 }
+
 figcaption {
 	font-size: x-small;
 }
+
 /**
 this section styles the information fact, list, 
 and description
 **/
-.information{
-	border: solid #1A237E;
+.information {
+	border: solid #1a237e;
 	margin: 10px;
 	padding: 10px;
 }
+
 .fact {
 	font-style: italic;
 }
+
 ul {
-	margin-left:0;
-	padding-left:0;
+	margin-left: 0;
+	padding-left: 0;
 }
+
 .listitem {
 	font-style: italic;
 	list-style: none;
 }
+
 .listlabel {
 	font-weight: bold;
 }
